# bl3_save_edit

./: Cargo.toml  README.md
bl3_save_edit_core/: Cargo.toml
bl3_save_edit_core/locales/: en.yml  zh-CN.yml
bl3_save_edit_core/src/: bl3_item.rs  lib.rs  parser.rs
bl3_save_edit_core/src/bl3_profile/: guardian_reward.rs  science_levels.rs  sdu.rs
bl3_save_edit_core/src/bl3_save/: ammo.rs  challenge_data.rs  inventory_slot.rs  player_class.rs  sdu.rs
bl3_save_edit_i18n/: Cargo.toml
bl3_save_edit_i18n/src/: lib.rs  lib3.rs  lib4.rs
bl3_save_edit_ui/: Cargo.toml
bl3_save_edit_ui/locales/: en.yml  zh-CN.yml
bl3_save_edit_ui/src/: bl3_ui.rs  bl3_ui_style.rs  main.rs
bl3_save_edit_ui/src/resources/: fonts.rs
bl3_save_edit_ui/src/views/: choose_save_directory.rs  initialization.rs  loading.rs  mod.rs  settings.rs  tab_bar_button.rs
bl3_save_edit_ui/src/views/item_editor/: editor.rs  extra_part_info.rs  item_editor_list_item.rs  item_editor_lootlemon_item.rs  list_item_contents.rs  mod.rs  parts_tab_bar.rs
bl3_save_edit_ui/src/views/item_editor/parts/: available_parts.rs  current_parts.rs
bl3_save_edit_ui/src/views/manage_profile/: general.rs  keys.rs  main.rs
bl3_save_edit_ui/src/views/manage_profile/profile/: guardian_rewards.rs  mod.rs  sdu.rs  skin_unlocker.rs
bl3_save_edit_ui/src/views/manage_save/: currency.rs  general.rs  main.rs
bl3_save_edit_ui/src/views/manage_save/character/: ammo.rs  gear.rs  mod.rs  sdu.rs  skins.rs
bl3_save_edit_ui/src/widgets/: labelled_element.rs  notification.rs  number_input.rs
i18n/en-US/: translations.ftl
(+1 files in other folders)
